<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools">

	<data>
		<import type="com.ap.fairvalue.ui.utils.DoubleConverter"/>
		<import type="com.ap.fairvalue.ui.utils.IntConverter"/>
		<variable name="model" type="com.ap.fairvalue.ui.ddm.DdmViewModel"/>
	</data>

	<ScrollView android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="#eeeeee">

		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				tools:context=".ui.ddm.DdmFragment">

			<TextView
					android:text="@string/enter_data"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView14"
					app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
					android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

			<TextView
					android:text="@string/divident_per_share"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="8dp"
					app:layout_constraintBaseline_toBaselineOf="@+id/etDdmDividentPerShare"/>

			<EditText
					android:layout_width="70dp"
					android:layout_height="wrap_content"
					android:inputType="numberDecimal"
					android:ems="10"
					android:id="@+id/etDdmDividentPerShare"
					android:layout_marginEnd="8dp"
					android:text="@={DoubleConverter.doubleToString(model.dividentPerShare)}"
					app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView14"/>

			<TextView
					android:text="@string/growth_rate"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView2"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="8dp"
					app:layout_constraintBaseline_toBaselineOf="@+id/etDdmCrownRate5"/>

			<TextView
					android:text="@string/label_1_5_years"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView3"
					app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
					app:layout_constraintEnd_toEndOf="@+id/etDdmCrownRate5"
					app:layout_constraintStart_toStartOf="@+id/etDdmCrownRate5"/>

			<EditText
					android:layout_width="70dp"
					android:layout_height="wrap_content"
					android:inputType="numberDecimal"
					android:ems="10"
					android:id="@+id/etDdmCrownRate5"
					app:layout_constraintEnd_toStartOf="@+id/textView6"
					android:layout_marginEnd="8dp"
					android:text="@={DoubleConverter.doubleToString(model.growthRate5)}"
					app:layout_constraintBaseline_toBaselineOf="@+id/etDdmCrownRate10"/>

			<TextView
					android:text="@string/percent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView6"
					app:layout_constraintBaseline_toBaselineOf="@+id/etDdmCrownRate10"
					app:layout_constraintEnd_toStartOf="@+id/etDdmCrownRate10"
					android:layout_marginEnd="8dp"/>

			<TextView
					android:text="@string/label_6_10_years"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView4"
					app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
					app:layout_constraintEnd_toEndOf="@+id/etDdmCrownRate10"
					app:layout_constraintStart_toStartOf="@+id/etDdmCrownRate10"
					android:layout_marginStart="8dp"/>

			<EditText
					android:layout_width="70dp"
					android:layout_height="wrap_content"
					android:inputType="numberDecimal"
					android:ems="10"
					android:id="@+id/etDdmCrownRate10"
					app:layout_constraintEnd_toStartOf="@+id/textView7"
					android:layout_marginEnd="8dp"
					android:text="@={DoubleConverter.doubleToString(model.growthRate10)}"
					app:layout_constraintBaseline_toBaselineOf="@+id/etDdmCrownRate11"/>

			<TextView
					android:text="@string/percent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView7"
					app:layout_constraintBaseline_toBaselineOf="@+id/etDdmCrownRate10"
					app:layout_constraintEnd_toStartOf="@+id/etDdmCrownRate11"
					android:layout_marginEnd="8dp"/>

			<TextView
					android:text="@string/label_11_years"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView5"
					android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/etDdmDividentPerShare"
					app:layout_constraintStart_toEndOf="@+id/textView7"
					android:layout_marginStart="8dp"
					app:layout_constraintEnd_toEndOf="@+id/etDdmCrownRate11"
					android:layout_marginEnd="8dp"/>

			<EditText
					android:layout_width="70dp"
					android:layout_height="wrap_content"
					android:inputType="numberDecimal"
					android:ems="10"
					android:id="@+id/etDdmCrownRate11"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="8dp"
					android:layout_marginTop="8dp"
					android:text="@={DoubleConverter.doubleToString(model.growthRate11)}"
					app:layout_constraintTop_toBottomOf="@+id/textView5"/>

			<TextView
					android:text="@string/discount_rate"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView8"
					app:layout_constraintBaseline_toBaselineOf="@+id/etDdmDiscountRate"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="8dp"/>

			<EditText
					android:layout_width="70dp"
					android:layout_height="wrap_content"
					android:inputType="numberDecimal"
					android:ems="10"
					android:id="@+id/etDdmDiscountRate"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="8dp"
					android:layout_marginTop="8dp"
					android:text="@={DoubleConverter.doubleToString(model.discountRate)}"
					app:layout_constraintTop_toBottomOf="@+id/etDdmCrownRate11"/>

			<TextView
					android:text="@string/fair_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView9"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="8dp"
					app:layout_constraintBaseline_toBaselineOf="@+id/etDdmFairValue"/>

			<EditText
					android:layout_width="70dp"
					android:layout_height="wrap_content"
					android:inputType="numberDecimal"
					android:ems="10"
					android:id="@+id/etDdmFairValue"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="8dp"
					android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/etDdmDiscountRate"
					android:text="@={IntConverter.intToString(model.fairValue)}"
					android:enabled="false"
					android:textColor="@android:color/holo_red_dark"/>

			<Button
					android:text="@string/calculate"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/btnDdmCalc"
					android:onClick="@{()->model.calc()}"
					android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/etDdmFairValue"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="8dp"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="8dp"/>

		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>

</layout>