<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.bfg.BfgFragment">

    <data>
        <import type="com.ap.fairvalue.ui.utils.DoubleConverter"/>
        <import type="com.ap.fairvalue.ui.utils.IntConverter"/>
        <variable name="model" type="com.ap.fairvalue.ui.bfg.BfgViewModel"/>
    </data>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#eeeeee">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardView3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cardBackgroundColor="@color/card_color">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                    <TextView
                            android:id="@+id/textView18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/earning_per_share"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="@dimen/main_label_size"
                            app:layout_constraintBaseline_toBaselineOf="@+id/etBfgEarlingPerShare"
                            app:layout_constraintStart_toStartOf="parent" />

                    <EditText
                            android:id="@+id/etBfgEarlingPerShare"
                            android:layout_width="@dimen/edit_text_width"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/edit_text_background"
                            android:ems="10"
                            android:inputType="numberDecimal"
                            android:text="@={model.earningPerShareString}"
                            android:textAlignment="center"
                            android:textSize="@dimen/main_label_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardView5"
                    app:layout_constraintTop_toBottomOf="@+id/cardView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/card_color">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                    <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/growth_rate"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="@dimen/main_label_size"
                            app:layout_constraintBottom_toTopOf="@+id/sbBfgGrowthRate"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/in_next_5_10_years"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textSize="@dimen/small_label_size"
                            app:layout_constraintBottom_toBottomOf="@+id/textView10"
                            app:layout_constraintStart_toEndOf="@+id/textView10"
                            app:layout_constraintTop_toTopOf="@+id/textView10" />

                    <TextView
                            android:id="@+id/tvBfgGrowthRate"
                            android:layout_width="@dimen/edit_text_width"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@{IntConverter.intToString(model.growthRate)}"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="@dimen/main_label_size"
                            android:textStyle="bold"
                            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:text="5" />

                    <SeekBar
                            android:id="@+id/sbBfgGrowthRate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:max="50"
                            android:onProgressChanged="@{(seekBar, progresValue, fromUser) -> model.onBfgGrowthRateValueChanged(fromUser)}"
                            android:progress="@={model.growthRate}"
                            android:thumbTint="@android:color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView10" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardView4"
                    app:layout_constraintTop_toBottomOf="@+id/cardView5"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/card_color">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                    <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/fair_value"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="@dimen/main_label_size"
                            app:layout_constraintBaseline_toBaselineOf="@+id/tvBfgFairValue"
                            app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                            android:id="@+id/tvBfgFairValue"
                            android:layout_width="@dimen/edit_text_width"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@={IntConverter.intToString(model.fairValue)}"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="@dimen/main_label_size"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="75" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                    android:text="@string/calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnBfgCalc"
                    android:onClick="@{()->model.calc()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardView4"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>